tests/ui/issues/issue-6596-2.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `$`
  --> $DIR/issue-6596-2.rs:3:16
   |
LL |         { $inp $nonexistent }
   |                ^^^^^^^^^^^^ expected one of 8 possible tokens
...
LL |     g!(foo);
   |     ------- in this macro invocation
   |
   = note: this error originates in the macro `g` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

